Issue #20065: socketmodule: Fix build error when AF_CAN is defined without the proper CAN headers.